deploy: e00db2f4a749c58096a25bf15b3d625e40a077cf

--- a/donate.html
+++ b/donate.html
@@ -8,19 +8,19 @@
 		<link href="./_app/immutable/assets/_layout.1f819e44.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/_page.f12cfe56.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/link.f74f4839.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.a93a144d.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.b2731ea2.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.9886bd70.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.0566ccbf.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.bd35ee46.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.02e0e57a.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/control.e7f5239e.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.cfd2779c.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.3d789238.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.d0623235.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.ef41e1d3.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/text.af933e8c.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.0442dc9f.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.0f975eca.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/constants.62cfb40b.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/main.c2ecaf00.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/donate-layout.svelte.9528ce8c.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/donate-page.svelte.a0207f57.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/link.3267776e.js"><title>Поддержите свободу в Санкт-Петербурге!</title><!-- HEAD_svelte-rjtykx_START --><meta name="title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:url" content="http://sveltekit-prerender/donate"><meta property="og:type" content="website"><meta property="og:title" content="Поддержите свободу в Санкт-Петербурге!"><meta property="og:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:image" content="https://spblpr.org/donate-preview-link.png"><meta property="og:image:secure_url" content="https://spblpr.org/donate-preview-link.png"><meta property="og:image:type" content="image/png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"><meta property="fb:app_id" content="499873967679919"><meta name="twitter:card" content="summary_large_image"><meta property="twitter:domain" content="spblpr.org"><meta property="twitter:url" content="http://sveltekit-prerender/donate"><meta name="twitter:title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="twitter:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta name="twitter:image" content="https://spblpr.org/donate-preview-link.png"><!-- HEAD_svelte-rjtykx_END -->
+		<link rel="modulepreload" href="./_app/immutable/entry/donate-layout.svelte.875bd62d.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/donate-page.svelte.7107d894.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/link.71c51e0b.js"><title>Поддержите свободу в Санкт-Петербурге!</title><!-- HEAD_svelte-rjtykx_START --><meta name="title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:url" content="http://sveltekit-prerender/donate"><meta property="og:type" content="website"><meta property="og:title" content="Поддержите свободу в Санкт-Петербурге!"><meta property="og:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:image" content="https://spblpr.org/donate-preview-link.png"><meta property="og:image:secure_url" content="https://spblpr.org/donate-preview-link.png"><meta property="og:image:type" content="image/png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"><meta property="fb:app_id" content="499873967679919"><meta name="twitter:card" content="summary_large_image"><meta property="twitter:domain" content="spblpr.org"><meta property="twitter:url" content="http://sveltekit-prerender/donate"><meta name="twitter:title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="twitter:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta name="twitter:image" content="https://spblpr.org/donate-preview-link.png"><!-- HEAD_svelte-rjtykx_END -->
 	</head>
 	<body>
 		<div>
@@ -70,7 +70,7 @@
 			
 			<script>
 				{
-					__sveltekit_pgjywl = {
+					__sveltekit_abwdbu = {
 						env: {},
 						base: new URL(".", location).pathname.slice(0, -1),
 						element: document.currentScript.parentElement
@@ -79,10 +79,10 @@
 					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.a93a144d.js"),
-						import("./_app/immutable/entry/app.cfd2779c.js")
+						import("./_app/immutable/entry/start.0566ccbf.js"),
+						import("./_app/immutable/entry/app.d0623235.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_pgjywl.element, {
+						kit.start(app, __sveltekit_abwdbu.element, {
 							node_ids: [0, 2, 4],
 							data,
 							form: null,
