--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
 		<link href="./_app/immutable/assets/_layout.1f819e44.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/_page.f12cfe56.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/link.f74f4839.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.a93a144d.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.b2731ea2.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.9886bd70.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.0566ccbf.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.bd35ee46.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.02e0e57a.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/control.e7f5239e.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.cfd2779c.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.3d789238.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.d0623235.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.ef41e1d3.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/text.af933e8c.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.0442dc9f.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.0f975eca.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/constants.62cfb40b.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/main.c2ecaf00.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/_page.svelte.7aac5558.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/link.3267776e.js"><title>ЛПР Петербург</title><!-- HEAD_svelte-1iagrm3_START --><meta name="title" content="ЛПР Петербург"><meta name="description" content="Отделение Либертарианской партии России в северной столице. Вступайте, если разделяете наши ценности!"><link rel="preconnect" href="https://lp-russia.org/join"><!-- HEAD_svelte-1iagrm3_END -->
+		<link rel="modulepreload" href="./_app/immutable/entry/_page.svelte.0f86cecf.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/link.71c51e0b.js"><title>ЛПР Петербург</title><!-- HEAD_svelte-1iagrm3_START --><meta name="title" content="ЛПР Петербург"><meta name="description" content="Отделение Либертарианской партии России в северной столице. Вступайте, если разделяете наши ценности!"><link rel="preconnect" href="https://lp-russia.org/join"><!-- HEAD_svelte-1iagrm3_END -->
 	</head>
 	<body>
 		<div>
@@ -68,7 +68,7 @@
 			
 			<script>
 				{
-					__sveltekit_pgjywl = {
+					__sveltekit_abwdbu = {
 						env: {},
 						base: new URL(".", location).pathname.slice(0, -1),
 						element: document.currentScript.parentElement
@@ -77,10 +77,10 @@
 					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.a93a144d.js"),
-						import("./_app/immutable/entry/app.cfd2779c.js")
+						import("./_app/immutable/entry/start.0566ccbf.js"),
+						import("./_app/immutable/entry/app.d0623235.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_pgjywl.element, {
+						kit.start(app, __sveltekit_abwdbu.element, {
 							node_ids: [0, 3],
 							data,
 							form: null,
