--- a/donate/tinkoff.html
+++ b/donate/tinkoff.html
@@ -6,21 +6,21 @@
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
 		<link href="../_app/immutable/assets/_layout.1f819e44.css" rel="stylesheet">
-		<link href="../_app/immutable/assets/_page.74fa6573.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.a93a144d.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/index.b2731ea2.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.9886bd70.js">
+		<link href="../_app/immutable/assets/_page.a9981ce8.css" rel="stylesheet">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.0566ccbf.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/index.bd35ee46.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.02e0e57a.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/control.e7f5239e.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.cfd2779c.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/_layout.svelte.3d789238.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.d0623235.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/_layout.svelte.ef41e1d3.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/text.af933e8c.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.0442dc9f.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.0f975eca.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/constants.62cfb40b.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/main.c2ecaf00.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/donate-layout.svelte.9528ce8c.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/donate-_slug_-page.svelte.d3cba43f.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/donate-_slug_-page.ts.ee39a623.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/_page.6d7ba070.js"><title>Поддержите свободу в Санкт-Петербурге!</title><!-- HEAD_svelte-rjtykx_START --><meta name="title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:url" content="http://sveltekit-prerender/donate/tinkoff"><meta property="og:type" content="website"><meta property="og:title" content="Поддержите свободу в Санкт-Петербурге!"><meta property="og:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:image" content="https://spblpr.org/donate-preview-link.png"><meta property="og:image:secure_url" content="https://spblpr.org/donate-preview-link.png"><meta property="og:image:type" content="image/png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"><meta property="fb:app_id" content="499873967679919"><meta name="twitter:card" content="summary_large_image"><meta property="twitter:domain" content="spblpr.org"><meta property="twitter:url" content="http://sveltekit-prerender/donate/tinkoff"><meta name="twitter:title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="twitter:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta name="twitter:image" content="https://spblpr.org/donate-preview-link.png"><!-- HEAD_svelte-rjtykx_END -->
+		<link rel="modulepreload" href="../_app/immutable/entry/donate-layout.svelte.875bd62d.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/donate-_slug_-page.svelte.160a5020.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/donate-_slug_-page.ts.32e3d1b0.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/_page.0aade1e3.js"><title>Поддержите свободу в Санкт-Петербурге!</title><!-- HEAD_svelte-rjtykx_START --><meta name="title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:url" content="http://sveltekit-prerender/donate/tinkoff"><meta property="og:type" content="website"><meta property="og:title" content="Поддержите свободу в Санкт-Петербурге!"><meta property="og:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:image" content="https://spblpr.org/donate-preview-link.png"><meta property="og:image:secure_url" content="https://spblpr.org/donate-preview-link.png"><meta property="og:image:type" content="image/png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"><meta property="fb:app_id" content="499873967679919"><meta name="twitter:card" content="summary_large_image"><meta property="twitter:domain" content="spblpr.org"><meta property="twitter:url" content="http://sveltekit-prerender/donate/tinkoff"><meta name="twitter:title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="twitter:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta name="twitter:image" content="https://spblpr.org/donate-preview-link.png"><!-- HEAD_svelte-rjtykx_END -->
 	</head>
 	<body>
 		<div>
@@ -28,7 +28,7 @@
 
 <div class="grid-container svelte-80q6by"><div class="main-content svelte-80q6by">
 <h1>Тинькофф</h1>
-<p class="svelte-28x2r3"><span class="svelte-28x2r3">5536 9138 8427 4453</span>
+<p class="svelte-bzs1vh"><span class="svelte-bzs1vh">5536 9138 8427 4453</span>
 	<button aria-label="Скопировать" class="svelte-kzqxxw"><!-- HTML_TAG_START --><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" aria-hidden="true" class="bx--snippet__icon" viewBox="0 0 32 32"><path d="M28 10v18H10V10h18m0-2H10a2 2 0 0 0-2 2v18a2 2 0 0 0 2 2h18a2 2 0 0 0 2-2V10a2 2 0 0 0-2-2Z"/><path d="M4 18H2V4a2 2 0 0 1 2-2h14v2H4Z"/></svg><!-- HTML_TAG_END -->
 	
 </button></p>
@@ -72,7 +72,7 @@
 			
 			<script>
 				{
-					__sveltekit_pgjywl = {
+					__sveltekit_abwdbu = {
 						env: {},
 						base: new URL("..", location).pathname.slice(0, -1),
 						element: document.currentScript.parentElement
@@ -81,10 +81,10 @@
 					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.a93a144d.js"),
-						import("../_app/immutable/entry/app.cfd2779c.js")
+						import("../_app/immutable/entry/start.0566ccbf.js"),
+						import("../_app/immutable/entry/app.d0623235.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_pgjywl.element, {
+						kit.start(app, __sveltekit_abwdbu.element, {
 							node_ids: [0, 2, 5],
 							data,
 							form: null,
