--- a/donate.html
+++ b/donate.html
@@ -8,19 +8,19 @@
 		<link href="./_app/immutable/assets/_layout.1f819e44.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/_page.f12cfe56.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/link.f74f4839.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.0566ccbf.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.11f965a7.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.bd35ee46.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.02e0e57a.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.36e8bd00.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/control.e7f5239e.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.d0623235.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.ef41e1d3.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.84d57ad2.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.7951b93c.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/text.af933e8c.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.0f975eca.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.3b6a019d.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/constants.62cfb40b.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/main.c2ecaf00.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/donate-layout.svelte.875bd62d.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/donate-layout.svelte.459dc1d7.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/donate-page.svelte.7107d894.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/link.71c51e0b.js"><title>Поддержите свободу в Санкт-Петербурге!</title><!-- HEAD_svelte-rjtykx_START --><meta name="title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:url" content="http://sveltekit-prerender/donate"><meta property="og:type" content="website"><meta property="og:title" content="Поддержите свободу в Санкт-Петербурге!"><meta property="og:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:image" content="https://spblpr.org/donate-preview-link.png"><meta property="og:image:secure_url" content="https://spblpr.org/donate-preview-link.png"><meta property="og:image:type" content="image/png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"><meta property="fb:app_id" content="499873967679919"><meta name="twitter:card" content="summary_large_image"><meta property="twitter:domain" content="spblpr.org"><meta property="twitter:url" content="http://sveltekit-prerender/donate"><meta name="twitter:title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="twitter:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta name="twitter:image" content="https://spblpr.org/donate-preview-link.png"><!-- HEAD_svelte-rjtykx_END -->
+		<link rel="modulepreload" href="./_app/immutable/chunks/link.71c51e0b.js"><title>Поддержите свободу в Санкт-Петербурге!</title><!-- HEAD_svelte-wfoygi_START --><meta name="title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:url" content="https://yslpn.github.io/spblpr/donate"><meta property="og:type" content="website"><meta property="og:title" content="Поддержите свободу в Санкт-Петербурге!"><meta property="og:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:image" content="https://yslpn.github.io/spblpr/og-donate.png"><meta property="og:image:secure_url" content="https://yslpn.github.io/spblpr/og-donate.png"><meta property="og:image:type" content="image/png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"><meta property="fb:app_id" content="499873967679919"><meta name="twitter:card" content="summary_large_image"><meta property="twitter:domain" content="yslpn.github.io"><meta property="twitter:url" content="https://yslpn.github.io/spblpr/donate"><meta name="twitter:title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="twitter:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta name="twitter:image" content="https://yslpn.github.io/spblpr/og-donate.png"><!-- HEAD_svelte-wfoygi_END -->
 	</head>
 	<body>
 		<div>
@@ -36,7 +36,7 @@
 	<a href="./donate/long" class=" svelte-nd5pfo" target="_self" rel="">Регулярное пожертвование
 </a>
 </nav></div>
-	<div class="footer svelte-80q6by"><nav class="svelte-sn6y8m"><a href="http://sveltekit-prerender/" class="svelte-sn6y8m">Главная</a>
+	<div class="footer svelte-80q6by"><nav class="svelte-sn6y8m"><a href="https://yslpn.github.io/spblpr/" class="svelte-sn6y8m">Главная</a>
 
 		</nav>
 		<ul class="svelte-15n3bs8"><li><a href="https://t.me/spblpr" target="_blank" aria-label="Telegram ЛПР Петербург" class="svelte-15n3bs8"><!-- HTML_TAG_START --><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 42 42"><g fill="none"><path fill="#1d98dc" d="M0 0h42v42H0z"/><path fill="#d8e4ee" d="M18.236 26.982c-.494 0-.41-.187-.581-.658L16.2 21.535l11.2-6.644"/><path fill="#c1d7e5" d="M18.236 27.057c.382 0 .55-.174.764-.382l2.036-1.98-2.54-1.531"/><path fill="#fff" d="m18.506 23.193 6.155 4.547c.703.388 1.21.187 1.384-.652l2.506-11.806c.256-1.028-.392-1.495-1.064-1.19l-14.712 5.673c-1.004.403-.998.963-.183 1.212l3.776 1.179 8.74-5.514c.413-.25.791-.116.48.16"/></g></svg><!-- HTML_TAG_END --></a></li>
@@ -70,8 +70,9 @@
 			
 			<script>
 				{
-					__sveltekit_abwdbu = {
+					__sveltekit_whj2rg = {
 						env: {},
+						assets: "/spblpr",
 						base: new URL(".", location).pathname.slice(0, -1),
 						element: document.currentScript.parentElement
 					};
@@ -79,10 +80,10 @@
 					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.0566ccbf.js"),
-						import("./_app/immutable/entry/app.d0623235.js")
+						import("./_app/immutable/entry/start.11f965a7.js"),
+						import("./_app/immutable/entry/app.84d57ad2.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_abwdbu.element, {
+						kit.start(app, __sveltekit_whj2rg.element, {
 							node_ids: [0, 2, 4],
 							data,
 							form: null,
