--- a/donate/long.html
+++ b/donate/long.html
@@ -8,18 +8,17 @@
 		<link href="../_app/immutable/assets/_layout.1f819e44.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/_page.49e12903.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/link.f74f4839.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.916f60bd.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.5084dacd.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.bd35ee46.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.08e48841.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.a62cf0f7.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/control.e7f5239e.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.fc9f9b29.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/_layout.svelte.3ed8b925.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.35710c6f.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/_layout.svelte.d401b4af.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/text.af933e8c.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.9f7ba085.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.f7fb585a.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/constants.62cfb40b.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/main.c2ecaf00.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/donate-layout.svelte.e5e56c83.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/headDonatePage.78d8adc3.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/donate-layout.svelte.89702689.js">
 		<link rel="modulepreload" href="../_app/immutable/entry/donate-long-page.svelte.c3bacdac.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/link.71c51e0b.js"><title>Поддержите свободу в Санкт-Петербурге!</title><!-- HEAD_svelte-wfoygi_START --><meta name="title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:url" content="https://yslpn.github.io/spblpr/donate/long"><meta property="og:type" content="website"><meta property="og:title" content="Поддержите свободу в Санкт-Петербурге!"><meta property="og:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:image" content="https://yslpn.github.io/spblpr/og-donate.png"><meta property="og:image:secure_url" content="https://yslpn.github.io/spblpr/og-donate.png"><meta property="og:image:type" content="image/png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"><meta property="fb:app_id" content="499873967679919"><meta name="twitter:card" content="summary_large_image"><meta property="twitter:domain" content="yslpn.github.io"><meta property="twitter:url" content="https://yslpn.github.io/spblpr/donate/long"><meta name="twitter:title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="twitter:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta name="twitter:image" content="https://yslpn.github.io/spblpr/og-donate.png"><!-- HEAD_svelte-wfoygi_END --><!-- HEAD_svelte-1oesfl4_START --><link rel="preconnect" href="https://www.patreon.com/spblpr"><link rel="preconnect" href="https://boosty.to/spblpr"><!-- HEAD_svelte-1oesfl4_END -->
 	</head>
@@ -76,7 +75,7 @@
 			
 			<script>
 				{
-					__sveltekit_1kz5w8j = {
+					__sveltekit_13q4qc0 = {
 						env: {},
 						assets: "/spblpr",
 						base: new URL("..", location).pathname.slice(0, -1),
@@ -86,10 +85,10 @@
 					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.916f60bd.js"),
-						import("../_app/immutable/entry/app.fc9f9b29.js")
+						import("../_app/immutable/entry/start.5084dacd.js"),
+						import("../_app/immutable/entry/app.35710c6f.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_1kz5w8j.element, {
+						kit.start(app, __sveltekit_13q4qc0.element, {
 							node_ids: [0, 2, 7],
 							data,
 							form: null,
