deploy: 198c129c29885d7b07bf3d476c0fd0707c058bf8

--- a/index.html
+++ b/index.html
@@ -8,18 +8,19 @@
 		<link href="./_app/immutable/assets/_layout.1f819e44.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/_page.f12cfe56.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/link.8da96628.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.c0f16384.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.6684b3ae.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.bd35ee46.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.b30119c8.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.2f7277ff.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/control.e7f5239e.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.f796a8ed.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.78d55a0c.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.da0a1406.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.7ca43091.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/text.af933e8c.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.00a677d5.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.daf2b995.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/constants.62cfb40b.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/main.c2ecaf00.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/_page.svelte.9d6b3cd0.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/link.f23dc004.js"><title>ЛПР Петербург</title><!-- HEAD_svelte-jox9uy_START --><meta name="title" content="ЛПР Петербург"><meta name="description" content="Отделение Либертарианской партии России в северной столице. Вступайте, если разделяете наши ценности!"><meta property="og:url" content="https://yslpn.github.io/spblpr/"><meta property="og:type" content="website"><meta property="og:title" content="ЛПР Петербург"><meta property="og:description" content="Отделение Либертарианской партии России в северной столице. Вступайте, если разделяете наши ценности!"><meta property="og:image" content="https://yslpn.github.io/spblpr/og-main.png"><meta property="og:image:secure_url" content="https://yslpn.github.io/spblpr/og-main.png"><meta property="og:image:type" content="image/png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"><meta property="fb:app_id" content="499873967679919"><meta name="twitter:card" content="summary_large_image"><meta property="twitter:domain" content="yslpn.github.io"><meta property="twitter:url" content="https://yslpn.github.io/spblpr/"><meta name="twitter:title" content="ЛПР Петербург"><meta name="twitter:description" content="Отделение Либертарианской партии России в северной столице. Вступайте, если разделяете наши ценности!"><meta name="twitter:image" content="https://yslpn.github.io/spblpr/og-main.png"><link rel="preconnect" href="https://lp-russia.org"><!-- HEAD_svelte-jox9uy_END -->
+		<link rel="modulepreload" href="./_app/immutable/entry/_page.svelte.aa96d7bb.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/link.f23dc004.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/meta.883eef79.js"><title>ЛПР Петербург</title><!-- HEAD_svelte-1t4jq75_START --><meta name="title" content="ЛПР Петербург"><meta name="description" content="Отделение Либертарианской партии России в северной столице. Вступайте, если разделяете наши ценности!"><meta property="og:url" content="https://yslpn.github.io/spblpr/"><meta property="og:type" content="website"><meta property="og:title" content="ЛПР Петербург"><meta property="og:description" content="Отделение Либертарианской партии России в северной столице. Вступайте, если разделяете наши ценности!"><meta property="og:image" content="https://yslpn.github.io/spblpr/og-main.png"><meta property="og:image:secure_url" content="https://yslpn.github.io/spblpr/og-main.png"><meta property="og:image:type" content="image/png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"><meta property="fb:app_id" content="499873967679919"><meta name="twitter:card" content="summary_large_image"><meta property="twitter:domain" content="yslpn.github.io"><meta property="twitter:url" content="https://yslpn.github.io/spblpr/"><meta name="twitter:title" content="ЛПР Петербург"><meta name="twitter:description" content="Отделение Либертарианской партии России в северной столице. Вступайте, если разделяете наши ценности!"><meta name="twitter:image" content="https://yslpn.github.io/spblpr/og-main.png"><link rel="preconnect" href="https://lp-russia.org"><!-- HEAD_svelte-1t4jq75_END -->
 	</head>
 	<body>
 		<div>
@@ -68,7 +69,7 @@
 			
 			<script>
 				{
-					__sveltekit_10r7mnk = {
+					__sveltekit_t9whuk = {
 						env: {},
 						assets: "/spblpr",
 						base: new URL(".", location).pathname.slice(0, -1),
@@ -78,10 +79,10 @@
 					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.c0f16384.js"),
-						import("./_app/immutable/entry/app.f796a8ed.js")
+						import("./_app/immutable/entry/start.6684b3ae.js"),
+						import("./_app/immutable/entry/app.da0a1406.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_10r7mnk.element, {
+						kit.start(app, __sveltekit_t9whuk.element, {
 							node_ids: [0, 3],
 							data,
 							form: null,
