--- a/donate/long.html
+++ b/donate/long.html
@@ -8,19 +8,20 @@
 		<link href="../_app/immutable/assets/_layout.1f819e44.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/_page.49e12903.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/link.8da96628.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.c0f16384.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.6684b3ae.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.bd35ee46.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.b30119c8.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.2f7277ff.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/control.e7f5239e.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.f796a8ed.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/_layout.svelte.78d55a0c.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.da0a1406.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/_layout.svelte.7ca43091.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/text.af933e8c.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.00a677d5.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.daf2b995.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/constants.62cfb40b.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/main.c2ecaf00.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/donate-layout.svelte.c67d7e1b.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/donate-long-page.svelte.fd18a836.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/link.f23dc004.js"><title>Поддержите свободу в Санкт-Петербурге!</title><!-- HEAD_svelte-wfoygi_START --><meta name="title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:url" content="https://yslpn.github.io/spblpr/donate/long"><meta property="og:type" content="website"><meta property="og:title" content="Поддержите свободу в Санкт-Петербурге!"><meta property="og:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:image" content="https://yslpn.github.io/spblpr/og-donate.png"><meta property="og:image:secure_url" content="https://yslpn.github.io/spblpr/og-donate.png"><meta property="og:image:type" content="image/png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"><meta property="fb:app_id" content="499873967679919"><meta name="twitter:card" content="summary_large_image"><meta property="twitter:domain" content="yslpn.github.io"><meta property="twitter:url" content="https://yslpn.github.io/spblpr/donate/long"><meta name="twitter:title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="twitter:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta name="twitter:image" content="https://yslpn.github.io/spblpr/og-donate.png"><!-- HEAD_svelte-wfoygi_END --><!-- HEAD_svelte-1oesfl4_START --><link rel="preconnect" href="https://www.patreon.com/spblpr"><link rel="preconnect" href="https://boosty.to/spblpr"><!-- HEAD_svelte-1oesfl4_END -->
+		<link rel="modulepreload" href="../_app/immutable/entry/donate-layout.svelte.462a4bf4.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/meta.883eef79.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/donate-long-page.svelte.1e37d9d9.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/link.f23dc004.js"><title>Поддержите свободу в Санкт-Петербурге!</title><!-- HEAD_svelte-1t4jq75_START --><meta name="title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:url" content="https://yslpn.github.io/spblpr/donate/long"><meta property="og:type" content="website"><meta property="og:title" content="Поддержите свободу в Санкт-Петербурге!"><meta property="og:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:image" content="https://yslpn.github.io/spblpr/og-donate.png"><meta property="og:image:secure_url" content="https://yslpn.github.io/spblpr/og-donate.png"><meta property="og:image:type" content="image/png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"><meta property="fb:app_id" content="499873967679919"><meta name="twitter:card" content="summary_large_image"><meta property="twitter:domain" content="yslpn.github.io"><meta property="twitter:url" content="https://yslpn.github.io/spblpr/donate/long"><meta name="twitter:title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="twitter:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta name="twitter:image" content="https://yslpn.github.io/spblpr/og-donate.png"><!-- HEAD_svelte-1t4jq75_END --><!-- HEAD_svelte-1oesfl4_START --><link rel="preconnect" href="https://www.patreon.com/spblpr"><link rel="preconnect" href="https://boosty.to/spblpr"><!-- HEAD_svelte-1oesfl4_END -->
 	</head>
 	<body>
 		<div>
@@ -75,7 +76,7 @@
 			
 			<script>
 				{
-					__sveltekit_10r7mnk = {
+					__sveltekit_t9whuk = {
 						env: {},
 						assets: "/spblpr",
 						base: new URL("..", location).pathname.slice(0, -1),
@@ -85,10 +86,10 @@
 					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.c0f16384.js"),
-						import("../_app/immutable/entry/app.f796a8ed.js")
+						import("../_app/immutable/entry/start.6684b3ae.js"),
+						import("../_app/immutable/entry/app.da0a1406.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_10r7mnk.element, {
+						kit.start(app, __sveltekit_t9whuk.element, {
 							node_ids: [0, 2, 7],
 							data,
 							form: null,
