--- a/donate/btc.html
+++ b/donate/btc.html
@@ -7,21 +7,21 @@
 		<meta http-equiv="content-security-policy" content="">
 		<link href="../_app/immutable/assets/_layout.1f819e44.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/_page.a9981ce8.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.28231143.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.5e5f7dc8.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.bd35ee46.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.43e71f2d.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.263d99ed.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/control.e7f5239e.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.8fad48f1.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/_layout.svelte.c22205da.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.6e240f58.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/_layout.svelte.27a76025.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/text.af933e8c.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.2deedeb6.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/constants.1df9f1cd.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.1df1b2c7.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/constants.f9b8c9b4.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/main.c2ecaf00.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/donate-layout.svelte.08d0ab31.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/meta.745da58a.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/donate-layout.svelte.e8955297.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/meta.d67f56e6.js">
 		<link rel="modulepreload" href="../_app/immutable/entry/donate-_slug_-page.svelte.160a5020.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/donate-_slug_-page.ts.8c8c9605.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/_page.fc379187.js"><title>Поддержите свободу в Санкт-Петербурге!</title><!-- HEAD_svelte-1t4jq75_START --><meta name="title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:url" content="https://yslpn.github.io/spblpr/donate/btc"><meta property="og:type" content="website"><meta property="og:title" content="Поддержите свободу в Санкт-Петербурге!"><meta property="og:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:image" content="https://yslpn.github.io/spblpr/og-donate.png"><meta property="og:image:secure_url" content="https://yslpn.github.io/spblpr/og-donate.png"><meta property="og:image:type" content="image/png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"><meta property="fb:app_id" content="499873967679919"><meta name="twitter:card" content="summary_large_image"><meta property="twitter:domain" content="yslpn.github.io"><meta property="twitter:url" content="https://yslpn.github.io/spblpr/donate/btc"><meta name="twitter:title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="twitter:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta name="twitter:image" content="https://yslpn.github.io/spblpr/og-donate.png"><!-- HEAD_svelte-1t4jq75_END -->
+		<link rel="modulepreload" href="../_app/immutable/entry/donate-_slug_-page.ts.e0c1217a.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/_page.334718bf.js"><title>Поддержите свободу в Санкт-Петербурге!</title><!-- HEAD_svelte-1t4jq75_START --><meta name="title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:url" content="https://yslpn.github.io/spblpr/donate/btc"><meta property="og:type" content="website"><meta property="og:title" content="Поддержите свободу в Санкт-Петербурге!"><meta property="og:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:image" content="https://yslpn.github.io/spblpr/og-donate.png"><meta property="og:image:secure_url" content="https://yslpn.github.io/spblpr/og-donate.png"><meta property="og:image:type" content="image/png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"><meta property="fb:app_id" content="499873967679919"><meta name="twitter:card" content="summary_large_image"><meta property="twitter:domain" content="yslpn.github.io"><meta property="twitter:url" content="https://yslpn.github.io/spblpr/donate/btc"><meta name="twitter:title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="twitter:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta name="twitter:image" content="https://yslpn.github.io/spblpr/og-donate.png"><!-- HEAD_svelte-1t4jq75_END -->
 	</head>
 	<body>
 		<div>
@@ -29,12 +29,12 @@
 
 <div class="grid-container svelte-80q6by"><div class="main-content svelte-80q6by">
 <h1>Bitcoin</h1>
-<p class="svelte-bzs1vh"><span class="svelte-bzs1vh">3HKUD9wjmHiWp11Z2K6kGZdnq5TAHe6rH3</span>
+<p class="svelte-bzs1vh"><span class="svelte-bzs1vh">bc1q00fygpsvgxkxw3f04twwrjmlgh2amc6pm6mpjj</span>
 	<button aria-label="Скопировать" class="svelte-kzqxxw"><!-- HTML_TAG_START --><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" aria-hidden="true" class="bx--snippet__icon" viewBox="0 0 32 32"><path d="M28 10v18H10V10h18m0-2H10a2 2 0 0 0-2 2v18a2 2 0 0 0 2 2h18a2 2 0 0 0 2-2V10a2 2 0 0 0-2-2Z"/><path d="M4 18H2V4a2 2 0 0 1 2-2h14v2H4Z"/></svg><!-- HTML_TAG_END -->
 	
 </button></p>
 
-<div class="svelte-bzs1vh"><!-- HTML_TAG_START --><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 37 37" shape-rendering="crispEdges"><path fill="#ffffff" d="M0 0h37v37H0z"/><path stroke="#000000" d="M4 4.5h7m1 0h2m1 0h2m2 0h3m1 0h2m1 0h7M4 5.5h1m5 0h1m1 0h2m2 0h1m3 0h1m1 0h1m3 0h1m5 0h1M4 6.5h1m1 0h3m1 0h1m1 0h5m2 0h3m1 0h1m2 0h1m1 0h3m1 0h1M4 7.5h1m1 0h3m1 0h1m2 0h1m1 0h2m3 0h5m1 0h1m1 0h3m1 0h1M4 8.5h1m1 0h3m1 0h1m1 0h1m1 0h1m3 0h3m2 0h1m2 0h1m1 0h3m1 0h1M4 9.5h1m5 0h1m3 0h2m3 0h4m1 0h1m1 0h1m5 0h1M4 10.5h7m1 0h1m1 0h1m1 0h1m1 0h1m1 0h1m1 0h1m1 0h1m1 0h7M15 11.5h3m1 0h3m1 0h1M4 12.5h1m2 0h6m1 0h1m2 0h1m2 0h1m3 0h2m2 0h1m1 0h3M8 13.5h2m2 0h2m2 0h2m2 0h1m1 0h1m1 0h1m1 0h2m1 0h4M6 14.5h8m3 0h1m1 0h1m1 0h1m3 0h1m2 0h1m1 0h3M4 15.5h1m2 0h3m3 0h1m1 0h3m4 0h1m1 0h1m1 0h1m3 0h1m1 0h1M9 16.5h4m1 0h2m1 0h1m2 0h2m2 0h1m3 0h1m1 0h1m1 0h1M5 17.5h1m2 0h2m1 0h3m1 0h1m1 0h2m1 0h1m3 0h1m2 0h4M4 18.5h1m4 0h2m2 0h1m3 0h1m2 0h1m3 0h1m1 0h4m2 0h1M5 19.5h4m5 0h2m4 0h1m3 0h1m1 0h6M4 20.5h1m2 0h1m2 0h2m2 0h2m2 0h2m1 0h1m1 0h1m2 0h2m1 0h1M4 21.5h4m1 0h1m1 0h1m2 0h2m1 0h5m2 0h1m1 0h2m4 0h1M4 22.5h7m3 0h2m3 0h1m1 0h2m1 0h1m1 0h1m1 0h1m1 0h2M4 23.5h2m6 0h1m2 0h1m2 0h1m4 0h1m1 0h1m2 0h1m2 0h1M4 24.5h2m4 0h1m1 0h3m2 0h2m1 0h1m1 0h1m1 0h5m2 0h1M12 25.5h1m1 0h2m2 0h1m3 0h1m1 0h1m3 0h2m2 0h1M4 26.5h7m1 0h2m4 0h1m1 0h2m1 0h2m1 0h1m1 0h4M4 27.5h1m5 0h1m1 0h1m1 0h2m2 0h1m1 0h2m2 0h1m3 0h1m1 0h2M4 28.5h1m1 0h3m1 0h1m1 0h2m2 0h3m3 0h8m1 0h2M4 29.5h1m1 0h3m1 0h1m1 0h1m1 0h3m3 0h1m1 0h1m1 0h2m3 0h1M4 30.5h1m1 0h3m1 0h1m6 0h2m1 0h1m1 0h4m2 0h1m2 0h2M4 31.5h1m5 0h1m4 0h2m4 0h1m2 0h1m2 0h2M4 32.5h7m1 0h2m3 0h1m1 0h5m1 0h1m2 0h2m1 0h1"/></svg>
+<div class="svelte-bzs1vh"><!-- HTML_TAG_START --><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 37 37" shape-rendering="crispEdges"><path fill="#ffffff" d="M0 0h37v37H0z"/><path stroke="#000000" d="M4 4.5h7m5 0h2m2 0h1m2 0h2m1 0h7M4 5.5h1m5 0h1m4 0h1m2 0h2m1 0h1m4 0h1m5 0h1M4 6.5h1m1 0h3m1 0h1m1 0h3m1 0h1m1 0h2m4 0h1m1 0h1m1 0h3m1 0h1M4 7.5h1m1 0h3m1 0h1m1 0h1m1 0h1m2 0h1m1 0h3m2 0h1m1 0h1m1 0h3m1 0h1M4 8.5h1m1 0h3m1 0h1m1 0h1m2 0h1m2 0h1m1 0h1m2 0h2m1 0h1m1 0h3m1 0h1M4 9.5h1m5 0h1m1 0h1m2 0h5m1 0h1m4 0h1m5 0h1M4 10.5h7m1 0h1m1 0h1m1 0h1m1 0h1m1 0h1m1 0h1m1 0h1m1 0h7M12 11.5h5m3 0h1m3 0h1M4 12.5h1m1 0h5m2 0h1m3 0h5m2 0h1m1 0h5M4 13.5h1m2 0h1m1 0h1m3 0h1m3 0h1m5 0h1m1 0h4m3 0h1M4 14.5h1m2 0h1m2 0h1m7 0h5m6 0h1M4 15.5h3m2 0h1m2 0h1m3 0h1m1 0h1m3 0h1m3 0h3M4 16.5h1m1 0h1m1 0h4m4 0h4m1 0h1m2 0h1m2 0h1m1 0h3M8 17.5h2m1 0h5m2 0h1m1 0h4m2 0h3m3 0h1M5 18.5h1m3 0h4m1 0h2m3 0h4m2 0h3m3 0h1M4 19.5h5m3 0h2m1 0h2m2 0h2m1 0h4m2 0h1m3 0h1M4 20.5h1m4 0h2m2 0h3m1 0h2m2 0h1m5 0h1m1 0h3M4 21.5h3m1 0h2m3 0h5m2 0h9m2 0h2M4 22.5h1m1 0h1m1 0h1m1 0h3m2 0h3m1 0h2m3 0h3m1 0h1M4 23.5h1m1 0h1m4 0h1m1 0h2m4 0h1m3 0h1m2 0h1m1 0h2m1 0h2M4 24.5h1m3 0h4m2 0h1m2 0h3m1 0h1m2 0h5m1 0h2M12 25.5h3m2 0h1m2 0h5m3 0h2m1 0h2M4 26.5h7m2 0h2m2 0h1m1 0h1m3 0h2m1 0h1m1 0h1m1 0h1M4 27.5h1m5 0h1m1 0h2m1 0h1m6 0h1m1 0h1m3 0h2m1 0h2M4 28.5h1m1 0h3m1 0h1m1 0h1m1 0h1m1 0h1m2 0h3m2 0h9M4 29.5h1m1 0h3m1 0h1m1 0h3m1 0h2m4 0h3m2 0h1m2 0h3M4 30.5h1m1 0h3m1 0h1m1 0h1m1 0h3m2 0h1m1 0h1m1 0h1m2 0h4m1 0h1M4 31.5h1m5 0h1m2 0h2m1 0h1m2 0h1m3 0h5m1 0h1m1 0h1M4 32.5h7m1 0h2m2 0h1m1 0h1m2 0h1m1 0h1m1 0h1m1 0h2m1 0h1"/></svg>
 <!-- HTML_TAG_END --></div></div>
 	<div class="footer svelte-80q6by"><nav class="svelte-sn6y8m"><a href="https://yslpn.github.io/spblpr/" class="svelte-sn6y8m">Главная</a>
 
@@ -75,7 +75,7 @@
 			
 			<script>
 				{
-					__sveltekit_g6883d = {
+					__sveltekit_1dxziez = {
 						env: {},
 						assets: "/spblpr",
 						base: new URL("..", location).pathname.slice(0, -1),
@@ -85,10 +85,10 @@
 					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.28231143.js"),
-						import("../_app/immutable/entry/app.8fad48f1.js")
+						import("../_app/immutable/entry/start.5e5f7dc8.js"),
+						import("../_app/immutable/entry/app.6e240f58.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_g6883d.element, {
+						kit.start(app, __sveltekit_1dxziez.element, {
 							node_ids: [0, 2, 5],
 							data,
 							form: null,
