--- a/donate/crypto.html
+++ b/donate/crypto.html
@@ -7,19 +7,19 @@
 		<meta http-equiv="content-security-policy" content="">
 		<link href="../_app/immutable/assets/_layout.1f819e44.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/link.8da96628.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.28231143.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.5e5f7dc8.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.bd35ee46.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.43e71f2d.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.263d99ed.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/control.e7f5239e.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.8fad48f1.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/_layout.svelte.c22205da.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.6e240f58.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/_layout.svelte.27a76025.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/text.af933e8c.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.2deedeb6.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/constants.1df9f1cd.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.1df1b2c7.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/constants.f9b8c9b4.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/main.c2ecaf00.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/donate-layout.svelte.08d0ab31.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/meta.745da58a.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/donate-crypto-page.svelte.125e2e90.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/donate-layout.svelte.e8955297.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/meta.d67f56e6.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/donate-crypto-page.svelte.8b2c94a2.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/link.f23dc004.js"><title>Поддержите свободу в Санкт-Петербурге!</title><!-- HEAD_svelte-1t4jq75_START --><meta name="title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:url" content="https://yslpn.github.io/spblpr/donate/crypto"><meta property="og:type" content="website"><meta property="og:title" content="Поддержите свободу в Санкт-Петербурге!"><meta property="og:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:image" content="https://yslpn.github.io/spblpr/og-donate.png"><meta property="og:image:secure_url" content="https://yslpn.github.io/spblpr/og-donate.png"><meta property="og:image:type" content="image/png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"><meta property="fb:app_id" content="499873967679919"><meta name="twitter:card" content="summary_large_image"><meta property="twitter:domain" content="yslpn.github.io"><meta property="twitter:url" content="https://yslpn.github.io/spblpr/donate/crypto"><meta name="twitter:title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="twitter:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta name="twitter:image" content="https://yslpn.github.io/spblpr/og-donate.png"><!-- HEAD_svelte-1t4jq75_END -->
 	</head>
 	<body>
@@ -34,6 +34,14 @@
 		</li><li><a href="./eth" class=" svelte-1ai65o1" target="_self" rel="">Ethereum
 </a>
 		</li><li><a href="./zec" class=" svelte-1ai65o1" target="_self" rel="">Zcash
+</a>
+		</li><li><a href="./dash" class=" svelte-1ai65o1" target="_self" rel="">Dash
+</a>
+		</li><li><a href="./usdt" class=" svelte-1ai65o1" target="_self" rel="">usdt-trc20
+</a>
+		</li><li><a href="./ltc" class=" svelte-1ai65o1" target="_self" rel="">Litecoin
+</a>
+		</li><li><a href="./usdc" class=" svelte-1ai65o1" target="_self" rel="">usdc-trc20
 </a>
 		</li></ul></div>
 	<div class="footer svelte-80q6by"><nav class="svelte-sn6y8m"><a href="https://yslpn.github.io/spblpr/" class="svelte-sn6y8m">Главная</a>
@@ -74,7 +82,7 @@
 			
 			<script>
 				{
-					__sveltekit_g6883d = {
+					__sveltekit_1dxziez = {
 						env: {},
 						assets: "/spblpr",
 						base: new URL("..", location).pathname.slice(0, -1),
@@ -84,10 +92,10 @@
 					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.28231143.js"),
-						import("../_app/immutable/entry/app.8fad48f1.js")
+						import("../_app/immutable/entry/start.5e5f7dc8.js"),
+						import("../_app/immutable/entry/app.6e240f58.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_g6883d.element, {
+						kit.start(app, __sveltekit_1dxziez.element, {
 							node_ids: [0, 2, 6],
 							data,
 							form: null,
