deploy: be806c6f2df4d6b5194c2fac0ff932ae5567d7fc

--- a/donate/alfabank.html
+++ b/donate/alfabank.html
@@ -7,21 +7,21 @@
 		<meta http-equiv="content-security-policy" content="">
 		<link href="../_app/immutable/assets/_layout.1f819e44.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/_page.a9981ce8.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.2d67afd0.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.bc9d0eb6.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.bd35ee46.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.8423f7c0.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.41066426.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/control.e7f5239e.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.4a4df47e.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/_layout.svelte.7f080a85.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.731ef372.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/_layout.svelte.cd7a7f11.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/text.af933e8c.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.dc2a2adc.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/constants.a6a828a1.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.f599e58d.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/constants.20a39f35.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/main.c2ecaf00.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/donate-layout.svelte.41780cf4.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/meta.7500d6b3.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/donate-layout.svelte.b9c7cb76.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/meta.bea0a12c.js">
 		<link rel="modulepreload" href="../_app/immutable/entry/donate-_slug_-page.svelte.160a5020.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/donate-_slug_-page.ts.dd3dc935.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/_page.d7162e89.js"><title>Поддержите свободу в Санкт-Петербурге!</title><!-- HEAD_svelte-1t4jq75_START --><meta name="title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:url" content="https://yslpn.github.io/spblpr/donate/alfabank"><meta property="og:type" content="website"><meta property="og:title" content="Поддержите свободу в Санкт-Петербурге!"><meta property="og:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:image" content="https://yslpn.github.io/spblpr/og-donate.png"><meta property="og:image:secure_url" content="https://yslpn.github.io/spblpr/og-donate.png"><meta property="og:image:type" content="image/png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"><meta property="fb:app_id" content="499873967679919"><meta name="twitter:card" content="summary_large_image"><meta property="twitter:domain" content="yslpn.github.io"><meta property="twitter:url" content="https://yslpn.github.io/spblpr/donate/alfabank"><meta name="twitter:title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="twitter:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta name="twitter:image" content="https://yslpn.github.io/spblpr/og-donate.png"><!-- HEAD_svelte-1t4jq75_END -->
+		<link rel="modulepreload" href="../_app/immutable/entry/donate-_slug_-page.ts.3c0b79ec.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/_page.3463613a.js"><title>Поддержите свободу в Санкт-Петербурге!</title><!-- HEAD_svelte-1t4jq75_START --><meta name="title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:url" content="https://yslpn.github.io/spblpr/donate/alfabank"><meta property="og:type" content="website"><meta property="og:title" content="Поддержите свободу в Санкт-Петербурге!"><meta property="og:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:image" content="https://yslpn.github.io/spblpr/og-donate.png"><meta property="og:image:secure_url" content="https://yslpn.github.io/spblpr/og-donate.png"><meta property="og:image:type" content="image/png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"><meta property="fb:app_id" content="499873967679919"><meta name="twitter:card" content="summary_large_image"><meta property="twitter:domain" content="yslpn.github.io"><meta property="twitter:url" content="https://yslpn.github.io/spblpr/donate/alfabank"><meta name="twitter:title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="twitter:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta name="twitter:image" content="https://yslpn.github.io/spblpr/og-donate.png"><!-- HEAD_svelte-1t4jq75_END -->
 	</head>
 	<body>
 		<div>
@@ -73,7 +73,7 @@
 			
 			<script>
 				{
-					__sveltekit_quqoi8 = {
+					__sveltekit_znbxeh = {
 						env: {},
 						assets: "/spblpr",
 						base: new URL("..", location).pathname.slice(0, -1),
@@ -83,10 +83,10 @@
 					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.2d67afd0.js"),
-						import("../_app/immutable/entry/app.4a4df47e.js")
+						import("../_app/immutable/entry/start.bc9d0eb6.js"),
+						import("../_app/immutable/entry/app.731ef372.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_quqoi8.element, {
+						kit.start(app, __sveltekit_znbxeh.element, {
 							node_ids: [0, 2, 5],
 							data,
 							form: null,
