--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
 		<link href="./_app/immutable/assets/_layout.1f819e44.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/_page.f12cfe56.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/link.8da96628.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.2d67afd0.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.bc9d0eb6.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.bd35ee46.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.8423f7c0.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.41066426.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/control.e7f5239e.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.4a4df47e.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.7f080a85.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.731ef372.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.cd7a7f11.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/text.af933e8c.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.dc2a2adc.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/constants.a6a828a1.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.f599e58d.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/constants.20a39f35.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/main.c2ecaf00.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/_page.svelte.d883ccc8.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/_page.svelte.2b9e7034.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/link.f23dc004.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/meta.7500d6b3.js"><title>ЛПР Петербург</title><!-- HEAD_svelte-1t4jq75_START --><meta name="title" content="ЛПР Петербург"><meta name="description" content="Отделение Либертарианской партии России в северной столице. Вступайте, если разделяете наши ценности!"><meta property="og:url" content="https://yslpn.github.io/spblpr/"><meta property="og:type" content="website"><meta property="og:title" content="ЛПР Петербург"><meta property="og:description" content="Отделение Либертарианской партии России в северной столице. Вступайте, если разделяете наши ценности!"><meta property="og:image" content="https://yslpn.github.io/spblpr/og-main.png"><meta property="og:image:secure_url" content="https://yslpn.github.io/spblpr/og-main.png"><meta property="og:image:type" content="image/png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"><meta property="fb:app_id" content="499873967679919"><meta name="twitter:card" content="summary_large_image"><meta property="twitter:domain" content="yslpn.github.io"><meta property="twitter:url" content="https://yslpn.github.io/spblpr/"><meta name="twitter:title" content="ЛПР Петербург"><meta name="twitter:description" content="Отделение Либертарианской партии России в северной столице. Вступайте, если разделяете наши ценности!"><meta name="twitter:image" content="https://yslpn.github.io/spblpr/og-main.png"><link rel="preconnect" href="https://lp-russia.org"><!-- HEAD_svelte-1t4jq75_END -->
+		<link rel="modulepreload" href="./_app/immutable/chunks/meta.bea0a12c.js"><title>ЛПР Петербург</title><!-- HEAD_svelte-1t4jq75_START --><meta name="title" content="ЛПР Петербург"><meta name="description" content="Отделение Либертарианской партии России в северной столице. Вступайте, если разделяете наши ценности!"><meta property="og:url" content="https://yslpn.github.io/spblpr/"><meta property="og:type" content="website"><meta property="og:title" content="ЛПР Петербург"><meta property="og:description" content="Отделение Либертарианской партии России в северной столице. Вступайте, если разделяете наши ценности!"><meta property="og:image" content="https://yslpn.github.io/spblpr/og-main.png"><meta property="og:image:secure_url" content="https://yslpn.github.io/spblpr/og-main.png"><meta property="og:image:type" content="image/png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"><meta property="fb:app_id" content="499873967679919"><meta name="twitter:card" content="summary_large_image"><meta property="twitter:domain" content="yslpn.github.io"><meta property="twitter:url" content="https://yslpn.github.io/spblpr/"><meta name="twitter:title" content="ЛПР Петербург"><meta name="twitter:description" content="Отделение Либертарианской партии России в северной столице. Вступайте, если разделяете наши ценности!"><meta name="twitter:image" content="https://yslpn.github.io/spblpr/og-main.png"><link rel="preconnect" href="https://lp-russia.org"><!-- HEAD_svelte-1t4jq75_END -->
 	</head>
 	<body>
 		<div>
@@ -69,7 +69,7 @@
 			
 			<script>
 				{
-					__sveltekit_quqoi8 = {
+					__sveltekit_znbxeh = {
 						env: {},
 						assets: "/spblpr",
 						base: new URL(".", location).pathname.slice(0, -1),
@@ -79,10 +79,10 @@
 					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.2d67afd0.js"),
-						import("./_app/immutable/entry/app.4a4df47e.js")
+						import("./_app/immutable/entry/start.bc9d0eb6.js"),
+						import("./_app/immutable/entry/app.731ef372.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_quqoi8.element, {
+						kit.start(app, __sveltekit_znbxeh.element, {
 							node_ids: [0, 3],
 							data,
 							form: null,
